--- a/index.html
+++ b/index.html
@@ -6,9 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Network</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <section>
+        <div>
+            <h2><span>Skip</span> The Diet,</h2>
+            <h2>Just Eat Healthy Food</h2>
+            <h2>with the <span>Food Network</span></h2>
+            <p>Imagine you don't need a diet because we provide healthy and delicious food for you!
+                Order Food.</p>
+
+        </div>
+    </section>
 
 </body>
 
