--- a/index.html
+++ b/index.html
@@ -10,14 +10,18 @@
 </head>
 
 <body>
-    <section>
+    <section class="diet">
         <div>
             <h2><span>Skip</span> The Diet,</h2>
             <h2>Just Eat Healthy Food</h2>
             <h2>with the <span>Food Network</span></h2>
             <p>Imagine you don't need a diet because we provide healthy and delicious food for you!
                 Order Food.</p>
+            <a class="link-button" target="_blank" href="https://www.pizzahut.com/">Order Food</a>
 
+        </div>
+        <div>
+            <img src="Group 8425.png" alt="">
         </div>
     </section>
 
