--- a/index.html
+++ b/index.html
@@ -24,6 +24,77 @@
             <img src="Group 8425.png" alt="">
         </div>
     </section>
+    <br><br><br>
+    <section class="number">
+
+        <div class="container">
+            <div class="image">
+                <img src="Person Image.png" alt="">
+            </div>
+            <div class="parag">
+                <h2>Good Food &</h2>
+                <h2>Great Company</h2>
+                <p>As we are very busy all days, so we advice you to call us before arriving, so we can guarantee your
+                    seat. </p>
+                <a class="link-button" href="">Contact Me</a>
+            </div>
+
+        </div>
+
+    </section>
+
+
+    <div class="menu">
+        <h1>Our Delicious Dishes</h1>
+        <p class="note">Our menus are packed with Mexican and American dishes to suit all tastes and freshly
+            prepared
+            with the best
+            ingredients For those who live to eat not eat to live.</p>
+    </div>
+    <section class="dish">
+        <div class="box">
+
+            <img src="Project Cover.jpg" alt="">
+            <h3>Bowl of chilli</h3>
+            <p><small>Spicy beef and red bean chili topped with cheddar cheese, scallions and sour cream</small></p>
+        </div>
+        <div class="box">
+
+            <img src="Project Cover1.jpg" alt="">
+            <h3>Wedge Salad</h3>
+            <p><small> iceberg lettuce topped with bacon, tomato, crumbled blue cheese, and blue cheese </small></p>
+        </div>
+        <div class="box">
+            <img src="Project Cover.png" alt="">
+            <h3>French Onion</h3>
+            <p><small>Baked in a crock and topped with gruyere cheese</small></p>
+        </div>
+
+
+
+    </section>
+
+    <br><br>
+    <section class="service">
+        <div>
+            <h2>700k</h2>
+            <p> Youtube Subscriber</p>
+        </div>
+        <div>
+            <h2>2.4 Million</h2>
+            <p> Instagram follower</p>
+        </div>
+        <div>
+            <h2>100k</h2>
+            <p>Facebook follower</p>
+        </div>
+    </section>
+    <footer class="end">
+        <h2><span>Food</span> Network</h2>
+        <p><small>Eat healthy to live healthy.</small>
+            <br><br><br><br><br><br><br>
+        </p>
+    </footer>
 
 </body>
 
